[gd_scene load_steps=2 format=3 uid="uid://cq31fxco4uxyc"]

[ext_resource type="Script" path="res://tscn/scripts/multiwork_poly.gd" id="1_xi0ji"]

[node name="MultiworkPoly" type="Polygon2D"]
invert_border = 50.0
polygon = PackedVector2Array(0, -24, -16, 8, 16, 8)
script = ExtResource("1_xi0ji")

[node name="PickArea" type="Area2D" parent="."]

[node name="PickAreaPolygon2D" type="CollisionPolygon2D" parent="PickArea"]

[connection signal="mouse_entered" from="PickArea" to="." method="_on_pick_area_mouse_entered"]
[connection signal="mouse_exited" from="PickArea" to="." method="_on_pick_area_mouse_exited"]
